--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -11,7 +11,7 @@
   },
   "cordova": {},
   "server": {
-      "url": "http://change-me:5001",
+      "url": "http://192.168.0.217:5001",
       "cleartext": true
   }
 }
